                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 16-03-2006 fixed: dvd playback over xbmsp (video_ts.ifo + vobs).
 - 16-03-2006 changed: Settings Network: On DHCP show received IP Informations Show instead of "-"!
 - 16-03-2006 added: Parsing of .cue sheet replaygain data (still unused though)
 - 16-03-2006 changed: Screensaver uses Dim mode if a dialog is onscreen, or video is being played when it should activate.
 - 16-03-2006 fixed: Textbox could cut text off if the UI was calibrated.
 - 16-03-2006 changed: defines in GUIInfomanager.cpp are now in GUIInfomanager.h, for global use
 - 16-03-2006 fixed: GUIInfomanager IP Detection
 - 16-03-2006 fixed: DebugLog in CDVDOverlayRenderer can cause Freeze
 - 16-03-2006 fixed: DNS Detection for Static and DHCP
 - 16-03-2006 added: Systeminfo Network, full DHCP Informations!
 - 16-03-2006 added: DCHP Network Informations to xbmc logfile
 - 16-03-2006 fixed: Systeminfo Mplayer version detection was broken (added also mplayer compile time)
 - 16-03-2006 fixed: Systeminfo Storage calculation was brocken
 - 16-03-2006 fixed: LogFatal in Application.cpp can cause Freeze
 - 16-03-2006 fixed: aspect ratio of dvd's would sometimes not update between different parts of dvd.
 - 16-03-2006 changed: Smart playlist listing now use the usual Songs view modes.
 - 16-03-2006 added: Dialog.Close(window) built in function.
 - 16-03-2006 fixed: IMDb thumbnails were not immediately shown after a lookup.
 - 15-03-2006 fixed: forgot to commit new nosefart dll a long time ago :)
 - 15-03-2006 added: Window.IsVisible bool condition.
 - 15-03-2006 fixed: Codec info could show on slideshow screensaver if it was last shown in fullscreen vis or video.